syntax = "proto3";

package Contracts.Services.Payment.Protobuf;

import "Abstractions/Abstractions.proto";

service PaymentService {
  rpc GetPaymentDetails(GetPaymentDetailsRequest) returns (Abstractions.Protobuf.GetResponse);
  rpc GetPaymentMethodDetails(GetPaymentMethodDetailsRequest) returns (Abstractions.Protobuf.GetResponse);
  rpc ListPaymentMethodListItem(ListPaymentMethodListItemRequest) returns (Abstractions.Protobuf.ListResponse);
}

// Requests

message GetPaymentDetailsRequest {
  string PaymentId = 1;
}

message GetPaymentMethodDetailsRequest {
  string PaymentId = 1;
  string MethodId = 2;
}

message ListPaymentMethodListItemRequest {
  string PaymentId = 1;
  Abstractions.Protobuf.Paging Paging = 2;
}

// Projections

message PaymentDetails {
  string PaymentId = 1;
  string OrderId = 2;
  Abstractions.Protobuf.Money Amount = 3;
  string Status = 4;
}

message PaymentMethodDetails {
  string MethodId = 1;
  string PaymentId = 2;
  string OrderId = 3;
  Abstractions.Protobuf.Money Amount = 4;
  Abstractions.Protobuf.PaymentOption Option = 5;
  string Status = 6;
}

message PaymentMethodListItem {
  string MethodId = 1;
  string PaymentId = 2;
  string OrderId = 3;
  Abstractions.Protobuf.Money Amount = 4;
  string Option = 5;
  string Status = 6;
}